# python-bulksms-kenya

./: README.md  setup.cfg
python_bulksms_kenya.egg-info/: PKG-INFO  SOURCES.txt
roycebulksms/: __init__.py  roycebulksms.py
