[metadata]
name = python-bulksms-kenya
version = 0.5
author = Royce Technologies Ltd
author_email = info@roycetechnologies.co.ke
description = Integrate Bulk SMS into your project in less than 2 minutes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src